--- a/requirements.core.txt
+++ b/requirements.core.txt
@@ -1,8 +1,8 @@
-datasets
-transformers
-peft
-accelerate
-numpy
-pandas
-tqdm
-wandb
+datasets==3.6.0
+transformers==4.57.3
+torch==2.9.1
+accelerate==1.12.0
+peft==0.18.0
+numpy==2.2.6
+pandas==2.3.3
+wandb==0.23.1
