--- a/requirements.lambda.txt
+++ b/requirements.lambda.txt
@@ -149,6 +149,7 @@ typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.2
 uvicorn==0.40.0
+vllm==0.15.0
 wandb==0.23.1
 websockets==15.0.1
 Werkzeug==3.1.4
