Add pairwise scoring, majority vote collection, reward offset/logging, and v3/v4 configs
- teacher_generate.py: --pairwise mode with position randomization
- experiment_majority_vote.py: k=5 majority vote data collection with --mode flag
- bt_baseline.py: add BT_REWARD_OFFSET env var and periodic delta distribution logging
- hh.py: add hh_score100_pairwise_v1 prompt
- train_grpo.sh: wandb entity, reward offset logging
- train_sft.sh: add --use_hf true
- New run configs for v3 (offset, symmetric clip) and v4 (advfilt, noscale) experiments
- .gitignore: exclude CLAUDE.md and docs/

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,12 @@ build/
 venv/
 venvs/
 
+# Claude Code
+CLAUDE.md
+
+# Local context docs (not for repo)
+docs/
+
 # Jupyter / misc
 .ipynb_checkpoints/
 .DS_Store
